fix(site): Hide scrollbar nonsense
The orbit animation includes a transform that translates elements 6px
from their central position. This causes animated elements to overflow
their containers and trigger scrollbars, so we hide the overflow and add
static padding to prevent visual cutoffs.

--- a/www-bucket/style.css
+++ b/www-bucket/style.css
@@ -36,13 +36,17 @@ body {
   width: inherit;
 }
 
+.page * {
+  padding: 24px;
+  overflow: hidden;
+}
+
 .rainbow {
   animation: fade-in 0.5s linear 0.5s 1 normal forwards,
     orbit 0.1s linear 1.5s infinite normal,
     rainbow-swing 0.1s linear 1.5s infinite normal;
   box-sizing: content-box;
   opacity: 0.01;
-  text-overflow: clip;
   text-shadow: 0 0 +12px black, 0 +3px 0 var(--electric-red),
     0 +6px 0 var(--dark-orange), 0 +9px 0 var(--canary-yellow),
     0 +12px 0 var(--la-salle-green), 0 +15px 0 var(--blue-ryb),
